--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gulp",
     "sass",
     "javascript",
-    "pug"
+    "pug",
+    "imagemin"
   ],
   "author": "Thiago Paim <contato@paim.website>",
   "license": "GPL-3.0",
@@ -23,6 +24,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-plumber": "^1.2.0",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
