--- a/package.json
+++ b/package.json
@@ -9,34 +9,31 @@
   "keywords": [
     "gulp",
     "sass",
-    "javascript",
     "pug",
-    "imagemin"
+    "babel"
   ],
   "author": "Thiago Paim <contato@paim.website>",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babelify": "^8.0.0",
-    "browser-sync": "^2.23.6",
-    "browserify": "^16.1.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "acorn": "^6.0.4",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.26.3",
+    "del": "^3.0.0",
+    "eslint": "^5.10.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-pug": "^3.3.0",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-pug": "^4.0.1",
     "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
-    "gulp-version-number": "^0.1.7",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "webpack-stream": "^5.2.1"
   },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  }
+  "dependencies": {}
 }
